# fishtank

./: AUTHORS  ChangeLog  Handleiding Aquarium.doc  Handleiding Webcams.doc
FaceTest/: TestDetection.sln
FaceTest/FaceDetection/: AssemblyInfo.cpp  FaceDetection.vcproj  FaceLocator.cpp  FaceLocator.h  ObjectLocator.cpp  ObjectLocator.h  ReadMe.txt  Stdafx.cpp  clsFaceDetectionWrapper.cpp  clsFaceDetectionWrapper.h
FaceTest/TestDetection/: ImageControl.cs  MotionDetection.cs  (+7 more)
TestAppFaceRec/: TestAppConsole.cpp  TestAppConsole.sln  TestAppConsole.vcproj  runapp.bat  utils.h
VideoStreamMerger/: VideoStreamMerger.sln
Vissen Project Aquarium/: .gitignore  AquariumController.cpp  AquariumController.h  Bubble.cpp  Bubble.h  Environment.cpp  Environment.h  Ground.cpp  Ground.h  JPEG.cpp  JPEG.h  MS3D_ASCII.cpp  MS3D_ASCII.h  Main.h  Makefile  Makefile.am  Matrix.cpp  Matrix.h  Object.cpp  Object.h  Rotating man.vcproj  Vector.cpp  Vector.h  Vis.cpp  Vis.h  autogen.sh  configure.ac  framerate.cpp  framerate.hpp  getline.cpp  getline.h  glexcept.cpp  imagereceiver.cpp  imagereceiver.h  main.cpp  main.hpp  math3.h  math3gl.h  safe_getline.cpp  safe_getline.h  (+4 more)
Vissen Project Aquarium/Data/: Makefile.am  README.txt  wiggle.glsl
Vissen Project Aquarium/Data/Objecten/: Gras.oif  aq06.oif  leopartshark.oif  rots1.oif
Vissen Project Aquarium/Data/Objecten/Modellen/: aq06.txt  aq08.txt  aq11.txt  steen_milkshake.txt  stenen_groep.txt  weed05.txt  weed13.txt  zw_gras.txt
Vissen Project Aquarium/Data/Vissen/: Makefile.am  YellowSubmarine.oif  bluetang.oif  guppieBT.oif  haai.oif  rantyu.oif  redbetta.oif  shark.oif  vis2.oif  vis3.oif
Vissen Project Aquarium/Data/Vissen/Modellen/: BlueTang0.txt  GuppyBlueGrass.txt  LeopardShark_milkshape.txt  NorthernPike_milkshape.txt  RedBetta.txt  RedBetta_milkshape.txt  RyugunoTukai0.txt  TurquoiseDiscus_milkshape.txt  leopartshark.txt  neonTeT.txt  vis2.txt
Vissen Project Aquarium/GL/: Makefile.am
Vissen Project Aquarium/Settings/: aquaConfig.txt
Vissen Project Aquarium/data/Vissen/: character.oif
Vissen Project Aquarium/data/model/: character.txt  character23.txt
Vissen Project Aquarium/debian/: .gitignore  changelog  control  control.in  rules
Vissen Project Aquarium/include/: jmorecfg.h
Vissen Project Aquarium/vertexarrays/: Makefile.am  abstractarray.hpp  abstractarraybase.hpp  abstractarraybuffer.hpp  gl_type_constants.hpp  normalarray.hpp  texcoordarray.hpp  trianglearray.cpp  trianglearray.hpp  vertexarray.hpp  vertexbuffer.cpp  vertexbuffer.hpp
Vissen Project Object File Generator/: Vissen Project Object File Generator.sln
Vissen Project Setup/: Vissen Project Setup.sln
Webcam Project/: Webcam Project.sln
WebcamFaceTest/: WebcamFaceTest.sln
WebcamSettings/: WebcamProggramma.txt  WebcamSettings.sln  imagecontrol.txt  settings.txt  webcams.txt
fishtank/: AquariumController.cpp  AquariumController.h  Bubble.cpp  Bubble.h  Environment.cpp  Environment.h  Ground.cpp  Ground.h  Handleiding.doc  MS3D_ASCII.cpp  MS3D_ASCII.h  Makefile.am  Object.cpp  Object.h  Rotating man.vcproj  Vis.cpp  Vis.h  Vissen Project.sln  aquarium.cpp  aquarium.hpp  autogen.sh  camera.cpp  camera.hpp  configure.ac  glexcept.hpp  image.hpp  imagereceiver.cpp  main.cpp  main.hpp  math-helpers.hpp  object.cpp  object.hpp  static-object.cpp  static-object.hpp  textures.cpp  textures.hpp  wiggle.cpp
fishtank/Data/: Makefile.am  icosphere-2.txt  icosphere-4.txt
fishtank/Data/Objecten/: CerianthusSp1.oif  Makefile.am  UrbinariaReniformis2.oif  steen.oif  zw_bladeren.oif  zw_boom.oif  zw_gras.oif  zw_stroken.oif
fishtank/Data/Objecten/Modellen/: CerianthusSp1.txt  CerianthusSp2.txt  FaviaFavus1.txt  FaviaFavus2.txt  FungiaScruposa1.txt  HeteractisMagnifica1.txt  HeteractisMagnifica2.txt  SiphonochalinaSiphonella1.txt  SiphonochalinaSiphonella2.txt  UrbinariaReniformis1.txt  UrbinariaReniformis2.txt  boom.txt  dunne_zw_stroken.txt  kumanomi_dood.txt  rocks.txt  schatkist.txt  schatkist_draai.txt  schatkist_draai2.txt  schatkist_draai3.txt  steen.txt  test.txt  zeester.txt  zeewier.txt  zw_bladeren.txt  zw_boom.txt  zw_gras.txt  zw_stroken.txt
fishtank/Data/Vissen/: Angel.oif  Makefile.am  YellowSubmarine.oif  clownfish.oif  guppieBT.oif  haai.oif  kumanomi.oif  neon.oif  vis2.oif
fishtank/Data/Vissen/Modellen/: Angel.txt  clownfish.txt  haai.txt  kumanomi.txt  yellow_submarine.txt
fishtank/Data/caustics/: Makefile.am
fishtank/Settings/: Makefile.am  aquaConfig.txt  fishtank-setup.lua  static-object.lua  wall.lua
fishtank/bitten-builds/: linux.xml
fishtank/debian/: control  control.in  rules
fishtank/lib/: Makefile.am
fishtank/lib/framework/: Makefile.am  debug-net-out.cpp  debug-net-out.hpp  debug.cpp  debug.hpp  property.hpp  resource.cpp  resource.hpp  threadpool.cpp  threadpool.hpp  type_traits.hpp  vfs.cpp  vfs.hpp
fishtank/lib/script/: Makefile.am  debug-support.cpp  debug-support.hpp  eigen-support.cpp  eigen-support.hpp  fish-support.cpp  fish-support.hpp  lua-base.cpp  lua-base.hpp  object-support.cpp  object-support.hpp  opengl-support.cpp  opengl-support.hpp  state.cpp  state.hpp  vertexarrays-support.cpp  vertexarrays-support.hpp
fishtank/vertexarrays/: Makefile.am  abstractarraybase.hpp  trianglearray.hpp  vertexbuffer.hpp
fishtank/win32/: cross-compile.sh  rules.mk
fishtank/win32/libs/: Makefile
fishtank/win32/libs/boost/: .gitignore  Makefile
fishtank/win32/libs/boost/patches/: 001-use-mingw-cross-compiler.diff  002-jpeg-io_error-exception.diff
fishtank/win32/libs/eigen/: .gitignore  Makefile
fishtank/win32/libs/glfw/: .gitignore  Makefile
fishtank/win32/libs/jpeg/: .gitignore  Makefile
fishtank/win32/libs/lua/: .gitignore  Makefile
fishtank/win32/libs/lua/patches/: 002-path-max-idsize.diff  003-error-noreturn.diff  004-decl-printf-format.diff  005-decl-deprecated.diff  006-sse-alignment.diff  007-exception-passing.diff  compile-as-c++.diff
fishtank/win32/libs/luabind/: .gitignore  Makefile
fishtank/win32/libs/png/: .gitignore  Makefile
fishtank/win32/libs/zlib/: .gitignore  Makefile
(+131 files in other folders)
