# GLee.c contains lacks plenty of declarations (thousands); so don't warn about it: it's *not* our code
AM_CFLAGS=$(FT_CFLAGS) -Wno-missing-declarations
AM_CXXFLAGS=$(FT_CXXFLAGS)
AM_CPPFLAGS=$(FT_CPPFLAGS)

noinst_LTLIBRARIES = libGLee.la

libGLee_la_SOURCES = \
	GLee.c

noinst_HEADERS = \
	GLee.h
