fishdir = $(pkgdatadir)/Vissen
nobase_dist_fish_DATA = \
	Angel.oif \
	Modellen/Angel.txt \
	Modellen/AngelTex.jpg \
	Modellen/BlueTaT.jpg \
	Modellen/BlueTang0.txt \
	Modellen/GuppyBT.jpg \
	Modellen/GuppyBlueGrass.txt \
	Modellen/Kumanomi.jpg \
	Modellen/NeonTeT.jpg \
	Modellen/Rantyu.txt \
	Modellen/Rantyu0.txt \
	Modellen/RantyuT.jpg \
	Modellen/RantyuTe.jpg \
	Modellen/RedBetta.jpg \
	Modellen/RedBetta.txt \
	Modellen/RyugunT.jpg \
	Modellen/RyugunoTukai0.txt \
	Modellen/TurquoT.jpg \
	Modellen/fence_uw.jpg \
	Modellen/kumanomi.txt \
	Modellen/main.jpg \
	Modellen/main_uwv.jpg \
	Modellen/motor_uv.jpg \
	Modellen/neonTeT.txt \
	Modellen/pipes_uv.jpg \
	Modellen/sidepane.jpg \
	Modellen/vis2.txt \
	Modellen/windows_.jpg \
	Modellen/yellow_submarine.txt \
	YellowSubmarine.oif \
	bluetang.oif \
	guppieBT.oif \
	haai.oif \
	kumanomi.oif \
	neon.oif \
	rantyu.oif \
	redbetta.oif \
	testvisadhd.oif \
	vis2.oif \
	vis3.oif \
	yellow_submarine.oif
