objectsdir = $(pkgdatadir)/Objecten
nobase_dist_objects_DATA = \
	Modellen/dunne_zw.jpg \
	Modellen/dunne_zw_stroken.txt \
	Modellen/zeewier.jpg \
	Modellen/zeewier.txt \
	Modellen/zw_boom.jpg \
	Modellen/zw_boom.txt \
	Modellen/zw_gras.jpg \
	Modellen/zw_gras.txt \
	dunne_zw_stroken.oif \
	zeewier.oif \
	zw_boom.oif \
	zw_gras.oif
