objectsdir = $(pkgdatadir)/Objecten
nobase_dist_objects_DATA = \
	Modellen/boom.jpg \
	Modellen/boom.txt \
	Modellen/CerianthusSp1.txt \
	Modellen/CerianthusSp2.txt \
	Modellen/chestlid.jpg \
	Modellen/cs1_b.jpg \
	Modellen/cs1.jpg \
	Modellen/cst1_b.jpg \
	Modellen/cst1.jpg \
	Modellen/dekselbu.jpg \
	Modellen/deksel.jpg \
	Modellen/dekselsp.jpg \
	Modellen/dunne_zw_stroken.txt \
	Modellen/dzwstroo.jpg \
	Modellen/FaviaFavus1.txt \
	Modellen/FaviaFavus2.txt \
	Modellen/fc1_b.jpg \
	Modellen/fc1.jpg \
	Modellen/fct1_b.jpg \
	Modellen/fct1.jpg \
	Modellen/ff2_b.jpg \
	Modellen/ff2.jpg \
	Modellen/ff_b.jpg \
	Modellen/ff.jpg \
	Modellen/FungiaScruposa1.txt \
	Modellen/geldbump.jpg \
	Modellen/geld.jpg \
	Modellen/geldspec.jpg \
	Modellen/HeteractisMagnifica1.txt \
	Modellen/HeteractisMagnifica2.txt \
	Modellen/hm1_b.jpg \
	Modellen/hm1.jpg \
	Modellen/hmt1_b.jpg \
	Modellen/hmt1.jpg \
	Modellen/kistbump.jpg \
	Modellen/kist.jpg \
	Modellen/kistspec.jpg \
	Modellen/kumanomi_dood.txt \
	Modellen/kumanomi.jpg \
	Modellen/rock_b.jpg \
	Modellen/rock.jpg \
	Modellen/rocks.jpg \
	Modellen/rocks.txt \
	Modellen/schatkist_draai2.txt \
	Modellen/schatkist_draai3.txt \
	Modellen/schatkist_draai.txt \
	Modellen/schatkist.txt \
	Modellen/SiphonochalinaSiphonella1.txt \
	Modellen/SiphonochalinaSiphonella2.txt \
	Modellen/ss1_b.jpg \
	Modellen/ss1.jpg \
	Modellen/sst1_b.jpg \
	Modellen/sst1.jpg \
	Modellen/sst2_b.jpg \
	Modellen/sst2.jpg \
	Modellen/steen.txt \
	Modellen/test.txt \
	Modellen/ur1_b.jpg \
	Modellen/ur1.jpg \
	Modellen/ur2_b.jpg \
	Modellen/ur2.jpg \
	Modellen/UrbinariaReniformis1.txt \
	Modellen/UrbinariaReniformis2.txt \
	Modellen/whites~2.jpg \
	Modellen/zeester.jpg \
	Modellen/zeester.txt \
	Modellen/zwblade.jpg \
	Modellen/zw_bladeren.txt \
	Modellen/zwboom.jpg \
	Modellen/zw_boom.txt \
	Modellen/zw_gras.jpg \
	Modellen/zw_gras.txt \
	Modellen/zwstroke.jpg \
	Modellen/zw_stroken.txt \
	boomstam.oif \
	CerianthusSp1.oif \
	CerianthusSp2.oif \
	dzw_stroken.oif \
	FaviaFavus1.oif \
	FaviaFavus2.oif \
	Fungiascuposa1.oif \
	HeteractisMagnifica1.oif \
	HeteractisMagnifica2.oif \
	rocks.oif \
	schatkist.oif \
	SiphonochalinaSiphonella1.oif \
	SiphonochalinaSiphonella2.oif \
	steen.oif \
	test.oif \
	UrbinariaReniformis1.oif \
	UrbinariaReniformis2.oif \
	visobject.oif \
	zeester.oif \
	zw_bladeren.oif \
	zw_boom.oif \
	zw_gras.oif \
	zw_stroken.oif
