fishdir = $(pkgdatadir)/Vissen
nobase_dist_fish_DATA = \
	Modellen/AngelTex.jpg \
	Modellen/Angel.txt \
	Modellen/BlueTang0.txt \
	Modellen/BlueTaT.jpg \
	Modellen/clownfish.txt \
	Modellen/clownvis.jpg \
	Modellen/fence_uw.jpg \
	Modellen/GuppyBlueGrass.txt \
	Modellen/GuppyBT.jpg \
	Modellen/haai.jpg \
	Modellen/haai.txt \
	Modellen/Kumanomi.jpg \
	Modellen/kumanomi.txt \
	Modellen/main_uvw.jpg \
	Modellen/motor_uv.jpg \
	Modellen/NeonTeT.jpg \
	Modellen/neonTeT.txt \
	Modellen/pipes_uv.jpg \
	Modellen/Rantyu0.txt \
	Modellen/RantyuTe.jpg \
	Modellen/RantyuT.jpg \
	Modellen/Rantyu.txt \
	Modellen/RedBetta.jpg \
	Modellen/RedBetta.txt \
	Modellen/RyugunoTukai0.txt \
	Modellen/RyugunT.jpg \
	Modellen/TurquoT.jpg \
	Modellen/vis2.txt \
	Modellen/yellow_submarine.txt \
	Angel.oif \
	bluetang.oif \
	clownfish.oif \
	guppieBT.oif \
	haai.oif \
	kumanomi.oif \
	neon.oif \
	rantyu.oif \
	redbetta.oif \
	testvisadhd.oif \
	vis2.oif \
	vis3.oif \
	YellowSubmarine.oif
