causticsdir = $(pkgdatadir)/caustics
nobase_dist_caustics_DATA = \
	caust00.jpg \
	caust01.jpg \
	caust02.jpg \
	caust03.jpg \
	caust04.jpg \
	caust05.jpg \
	caust06.jpg \
	caust07.jpg \
	caust08.jpg \
	caust09.jpg \
	caust10.jpg \
	caust11.jpg \
	caust12.jpg \
	caust13.jpg \
	caust14.jpg \
	caust15.jpg \
	caust16.jpg \
	caust17.jpg \
	caust18.jpg \
	caust19.jpg \
	caust20.jpg \
	caust21.jpg \
	caust22.jpg \
	caust23.jpg \
	caust24.jpg \
	caust25.jpg \
	caust26.jpg \
	caust27.jpg \
	caust28.jpg \
	caust29.jpg \
	caust30.jpg \
	caust31.jpg
